# nakama-python

./: LICENSE  README.md  pyproject.toml
.github/: entrypoint.sh
.github/workflows/: ci.yaml
nakama/: __init__.py  api.py  client.py  config.py  types.py
tests/: test_console_api.py  test_ncc_authenticate.py
