[tool.poetry]
name = "nakama"
version = "0.1.0"
description = "Python client for nakama server"
authors = ["Felipe Ruhland <felipe.ruhland@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
